# aerial-omniverse-digital-twin

./: .clang-format  LICENSE  README.md
client/: CMakeLists.txt  README.md  pyproject.toml
client/config/: CMakeLists.txt  README.md  __init__.py  aodt_config.hpp  aodt_config_bindings.cpp  core_types.hpp  prim_collections.hpp  prims.hpp  sim_config.hpp  test_aodt_config.py
client/config/docs/: advanced.rst  api.rst  index.rst  quickstart.rst
client/config/tests/: test_aodt_config.cpp  test_asset_loading.cpp
client/examples/: example.cpp  example_calibration.py  example_cir.cpp  example_client.py  example_client_assets.yml  example_client_calibration_yaml_config.py  example_client_yaml_config.py  example_drop_database.py  example_full_sim.py  example_generate_yaml_config.hpp  example_import_yaml_config.py  example_multi_timesteps.cpp  example_multi_timesteps.py  example_prepare_map.py  example_prepare_map_terraform.py  example_query_tables.py  extract_CFR_sample.py  extract_CIR_sample.py  plot_CFR.py  plot_PDP_from_CIR.py  ran_metric.py
client/examples/beamforming/: README.md  pipeline.py
client/examples/beamforming/helpers/plot/: plot_beam_power_timeseries.py
client/examples/beamforming/helpers/s3_io/: fetch_calibrated_beamforming_artifacts.py
client/examples/beamforming/src/: __init__.py
client/examples/beamforming/src/core/: __init__.py  beamforming_pipeline_core.py  constants.py
client/examples/beamforming/src/interfaces/: __init__.py  panel.py  sim_context.py
client/examples/beamforming/src/io/: __init__.py  beamforming_pipeline_io.py  codebook_csv_loader.py  data_fetcher.py  s3_codebook_loader.py  sim_context_fetcher.py
client/protos/: service.proto
client/src/: __init__.py  client.cpp  client.h  client_bindings.cpp  logger.hpp  ucx_transport.cpp  ucx_transport.h
client/tests/: client_standalone_smoke.cpp  mr_tests.sh  test_client_standalone.py  test_dt_integration.py  test_prepare_map_api.py
client/tests/assets/: TC_2RU_4UE_4T4R_1sym.yml  quickstart_batched_em.yaml  quickstart_batched_ran.yaml  quickstart_interactive.yaml  quickstart_procedural_ue.yaml
container/: Dockerfile  README.md  build.sh  entrypoint.sh  run.sh
viewer/: README.md  package-lock.json  package.json  react-router.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
viewer/app/: app.css  entry.client.tsx  entry.server.tsx  root.tsx  routes.ts
viewer/app/components/layers/: DistributedUnitLayer.ts  GhostPreviewLayer.tsx  MoveGizmoLayer.tsx  RadioUnitLayer.ts  RaypathLayer.test.ts  RaypathLayer.ts  RotateGizmoLayer.tsx  ScattererLayer.ts  SpawnZoneLayer.ts  TileManager.ts  UserEquipmentLayer.ts
viewer/app/components/ui/: BaseLayerPicker.tsx  CursorPositionDisplay.test.tsx  CursorPositionDisplay.tsx  EntitiesPanel.tsx  EntitiesSearchBar.tsx  LeftSidebar.tsx  LocationSearch.test.tsx  LocationSearch.tsx  MinIOSettings.tsx  RaypathFilters.tsx  RightSidebar.tsx  Settings.test.tsx  Settings.tsx  Timeline.tsx  TopHeader.test.tsx  TopHeader.tsx  YmlEditor.test.tsx  YmlEditor.tsx  ZoomButton.test.tsx  ZoomButton.tsx
viewer/app/components/ui/properties/: BuildingProperties.tsx  PanelLayoutVisualizer.tsx  (+6 more)
viewer/app/components/viewer/: CesiumViewer.tsx
viewer/app/constants/: antennaTypes.ts  baseLayers.test.ts  baseLayers.ts  cesium.ts  entityDefaults.ts  icons.tsx  index.ts  locations.test.ts  locations.ts  timeline.ts  ui.ts  visualization.ts
viewer/app/hooks/cesium/: index.ts  useCameraManager.test.ts  useCameraManager.ts  useCesiumViewer.test.ts  useCesiumViewer.ts  usePickingHandlers.ts
viewer/app/hooks/database/: index.ts  useAutoRefreshOnReconnect.test.ts  useAutoRefreshOnReconnect.ts
viewer/app/hooks/entities/: index.ts  useDistributedUnits.test.ts  useDistributedUnits.ts  usePanels.test.ts  usePanels.ts  useRadioUnits.test.ts  useRadioUnits.ts  useRaypaths.test.ts  useRaypaths.ts  useScatterers.test.ts  useScatterers.ts  useSpawnZone.test.ts  useSpawnZone.ts  useUserEquipments.test.ts  useUserEquipments.ts
viewer/app/managers/: dataLoader.test.ts  dataLoader.ts  databaseManager.test.ts  databaseManager.ts  distributedUnitManager.test.ts  distributedUnitManager.ts  layerManager.test.ts  layerManager.ts  panelManager.test.ts  panelManager.ts  radioUnitManager.test.ts  radioUnitManager.ts  raypathManager.test.ts  raypathManager.ts  scattererManager.test.ts  scattererManager.ts  scenarioManager.test.ts  scenarioManager.ts  spawnZoneManager.test.ts  spawnZoneManager.ts  userEquipmentManager.test.ts  userEquipmentManager.ts  ymlConfigLoader.test.ts  ymlConfigLoader.ts
viewer/app/routes/: api.iceberg.ts  api.minio.test.ts  api.minio.ts  viewer.tsx
viewer/app/services/cesium/: coordinateService.test.ts  coordinateService.ts  highlightService.test.ts  highlightService.ts  index.ts  typeGuards.test.ts  typeGuards.ts
viewer/app/services/database/: index.ts  minioClient.test.ts  minioClient.ts
viewer/app/services/visualization/: colorGradient.test.ts  colorGradient.ts  index.ts
viewer/app/store/: types.ts  viewerStore.test.ts  viewerStore.ts
viewer/app/store/slices/: cameraSlice.test.ts  cameraSlice.ts  dataSourceSlice.test.ts  dataSourceSlice.ts  layerSlice.test.ts  layerSlice.ts  materialAssignmentSlice.ts  objectSlice.test.ts  objectSlice.ts  scenarioSlice.test.ts  scenarioSlice.ts  uiSlice.test.ts  uiSlice.ts
viewer/app/store/utils/: localStorage.test.ts  localStorage.ts
viewer/app/test/: setup.ts
viewer/app/test/integration/: data-flow-integration.test.ts  manager-service-integration.test.ts  store-integration.test.ts
viewer/app/types/: cesium.ts  entities.ts  index.ts  simulation.ts
viewer/app/utils/: gisTilesets.test.ts  gisTilesets.ts  minioProxyResource.test.ts  minioProxyResource.ts  moveGizmo.test.ts  moveGizmo.ts  rotateGizmo.ts  ruDuAutoAssign.test.ts  ruDuAutoAssign.ts  s3SigV4.test.ts  s3SigV4.ts  uePlacementTimeIndices.test.ts  uePlacementTimeIndices.ts
viewer/public/glb/: car.glb  radio_unit.glb
viewer/tests/: mr_tests.sh
worker/: README.md  config_ran.json  copy_to_s3.sh  docker-compose.aws.yml  docker-compose.yml  up.sh
(+11 files in other folders)
