# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core>=0.9", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "dt-client"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []

[tool.scikit-build]
cmake.build-type = "Release"
# All Python files are installed via CMake install() commands
wheel.packages = []
